code/shell/demo3-iptables/iptables-20180622-v1
# Generated by iptables-save v1.4.21 on Fri Jun 22 20:26:35 2018
*filter
:INPUT ACCEPT [2:473]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:in_ping_rules - [0:0]
-A INPUT -d 192.168.43.48/32 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.43.48/32 -p udp -m udp --dport 137:138 -m state --state NEW -j ACCEPT
-A INPUT -d 192.168.43.48/32 -p tcp -m tcp --dport 23 -m state --state NEW -j LOG --log-prefix "access telnet"
-A INPUT -d 192.168.43.48/32 -p tcp -m multiport --dports 21:23,80,139,445,3306 -m state --state NEW -j ACCEPT
-A INPUT -d 192.168.43.48/32 -p icmp -j in_ping_rules
-A INPUT -d 192.168.43.48/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -s 192.168.43.48/32 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 192.168.43.48/32 -p udp -m multiport --dports 123,323 -m state --state NEW -j ACCEPT
-A OUTPUT -s 192.168.43.48/32 -d 39.107.75.0/32 -j ACCEPT
-A OUTPUT -s 192.168.43.48/32 -j REJECT --reject-with icmp-port-unreachable
-A in_ping_rules -s 192.168.43.120/32 -d 192.168.43.48/32 -p icmp -j REJECT --reject-with icmp-port-unreachable
-A in_ping_rules -d 192.168.43.48/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
COMMIT
# Completed on Fri Jun 22 20:26:35 2018
